Fix double scrollbar on publications

--- a/css/main.css
+++ b/css/main.css
@@ -92,8 +92,7 @@ div::-webkit-scrollbar-thumb {
 #publications-container {
   grid-column: 3/8;
   grid-row: 1/5;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
+  overflow-y: hidden;
   transition: opacity 0.25s ease-in-out;
   padding: 2% 2% 2% 2%;
   z-index: 11;
@@ -432,6 +431,8 @@ iframe {
   #publications-container {
     grid-column: 1/17;
     grid-row: 4/5;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 
   .project-iframe-container {
